quitando websocket y variables de entorno